# libffi-rs

./: .gitignore  Cargo.toml  QSORT.md  README.md  rustfmt.toml
.github/workflows/: test.yml  upgrade_libffi.yml
examples/call_c_fn/: Cargo.toml  README.md  build.rs
examples/call_c_fn/examples/: call_c_fn.rs
examples/call_c_fn/src/: lib.c  lib.rs
examples/call_c_fn_varargs_fn/: Cargo.toml  README.md
examples/call_c_fn_varargs_fn/examples/: call_c_fn.rs  qsort.rs
examples/call_c_fn_varargs_fn/src/: lib.c  lib.rs
examples/no_std_run/: Cargo.toml  README.md
examples/no_std_run/src/: main.rs
libffi-rs/: CHANGELOG.md  Cargo.toml  README.md
libffi-rs/src/: lib.rs  low.rs
libffi-rs/src/high/: closures.rs  foreign_func.rs  mod.rs  types.rs
libffi-rs/src/high/closures/: mod.rs  structs.rs  traits.rs
libffi-rs/src/middle/: arg.rs  builder.rs  closure.rs  mod.rs  types.rs  util.rs
libffi-sys-rs/: Cargo.toml  README.md
libffi-sys-rs/include/msvc/: ffi.h
libffi-sys-rs/include/msvc/aarch64/: fficonfig.h
libffi-sys-rs/include/msvc/x86/: ffi.h  fficonfig.h
libffi-sys-rs/include/msvc/x86_64/: ffi.h  fficonfig.h
libffi-sys-rs/libffi/src/powerpc/: ffi.c
libffi-sys-rs/src/: arch.rs  lib.rs
scripts/: README.md  ci-checks.bat  ci-checks.sh  clippy-driver.bat  clippy-driver.sh  qemutests.sh  targettest.sh
