[package]
name = "libffi"
version = "3.2.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Rust bindings for libffi"
repository = "https://github.com/tov/libffi-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ffi", "libffi", "closure", "c"]
categories = ["development-tools::ffi"]
edition = "2024"
rust-version = "1.85"

[dependencies]
libffi-sys = { path = "../libffi-sys-rs", version = "^2.3" }

[features]
default = ["middle", "high"]
complex = ["libffi-sys/complex"]
middle = []
high = ["middle"]
system = ["libffi-sys/system"]

[package.metadata.docs.rs]
features = ["system"]

[lints]
workspace = true